# uasset-rs

./: Cargo.toml  README.md  UNREAL_UPGRADES.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: checks.yml  publish_crate.yml  rust.yml
assets/UE410/DirectCycle/: DirectCycleB.uasset
assets/UE410/SimpleRefs/: SimpleRefsDefaultsRef.uasset  SimpleRefsRoot.uasset  SimpleRefsSoftRef.uasset
assets/UE411/DirectCycle/: DirectCycleA.uasset  DirectCycleB.uasset
assets/UE411/IndirectCycle/: IndirectCycleA.uasset  IndirectCycleB.uasset  IndirectCycleC.uasset
assets/UE411/SimpleRefs/: SimpleRefsDefaultsRef.uasset  SimpleRefsGraphRef.uasset  SimpleRefsRoot.uasset  SimpleRefsSoftRef.uasset
assets/UE412/DirectCycle/: DirectCycleA.uasset  DirectCycleB.uasset
assets/UE412/IndirectCycle/: IndirectCycleA.uasset  IndirectCycleB.uasset  IndirectCycleC.uasset
assets/UE412/SimpleRefs/: SimpleRefsDefaultsRef.uasset  SimpleRefsGraphRef.uasset  SimpleRefsRoot.uasset  SimpleRefsSoftRef.uasset
assets/UE413/DirectCycle/: DirectCycleA.uasset  DirectCycleB.uasset
assets/UE413/IndirectCycle/: IndirectCycleA.uasset  IndirectCycleB.uasset  IndirectCycleC.uasset
assets/UE413/SimpleRefs/: SimpleRefsDefaultsRef.uasset  SimpleRefsGraphRef.uasset  SimpleRefsRoot.uasset  SimpleRefsSoftRef.uasset
assets/UE414/DirectCycle/: DirectCycleA.uasset  DirectCycleB.uasset
assets/UE414/IndirectCycle/: IndirectCycleA.uasset  IndirectCycleB.uasset  IndirectCycleC.uasset
assets/UE414/SimpleRefs/: SimpleRefsDefaultsRef.uasset  SimpleRefsGraphRef.uasset  SimpleRefsRoot.uasset  SimpleRefsSoftRef.uasset
assets/UE415/DirectCycle/: DirectCycleA.uasset  DirectCycleB.uasset
assets/UE415/IndirectCycle/: IndirectCycleA.uasset  IndirectCycleB.uasset  IndirectCycleC.uasset
assets/UE415/SimpleRefs/: SimpleRefsDefaultsRef.uasset  SimpleRefsGraphRef.uasset  SimpleRefsRoot.uasset  SimpleRefsSoftRef.uasset
assets/UE416/DirectCycle/: DirectCycleA.uasset  DirectCycleB.uasset
assets/UE416/IndirectCycle/: IndirectCycleA.uasset  IndirectCycleB.uasset  IndirectCycleC.uasset
assets/UE416/SimpleRefs/: SimpleRefsDefaultsRef.uasset  SimpleRefsGraphRef.uasset  SimpleRefsRoot.uasset  SimpleRefsSoftRef.uasset
assets/UE417/DirectCycle/: DirectCycleA.uasset  DirectCycleB.uasset
assets/UE417/IndirectCycle/: IndirectCycleA.uasset  IndirectCycleB.uasset  IndirectCycleC.uasset
assets/UE417/SimpleRefs/: SimpleRefsDefaultsRef.uasset  SimpleRefsGraphRef.uasset  SimpleRefsRoot.uasset  SimpleRefsSoftRef.uasset
assets/UE418/DirectCycle/: DirectCycleA.uasset  DirectCycleB.uasset
assets/UE418/IndirectCycle/: IndirectCycleA.uasset  IndirectCycleB.uasset  IndirectCycleC.uasset
assets/UE418/SimpleRefs/: SimpleRefsDefaultsRef.uasset  SimpleRefsGraphRef.uasset  (+2 more)
src/: archive.rs  enums.rs  error.rs  lib.rs  main.rs  serialization.rs  types.rs  versions.rs
src/serialization/: implementations.rs
src/types/: versions.rs
test_utilities/: Cargo.toml
test_utilities/src/: lib.rs
tests/: asset_references.rs  basic_parsing.rs  unreal_versions.rs
(+144 files in other folders)
