[package]
name = "uasset"
description = "Parsing of Unreal Engine asset files (uassets)"
keywords = ["unreal", "ue4", "uasset"]
categories = ["game-development", "parser-implementations"]
authors = ["Jørgen P. Tjernø <jorgen@tjer.no>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jorgenpt/uasset-rs/"
repository = "https://github.com/jorgenpt/uasset-rs/"
version = "0.1.0"

[dependencies]
binread = "2.1.1"
structopt = "0.3"
thiserror = "^1"

[dev-dependencies]
rstest = "0.10.0"
rstest_reuse = "0.1.3"