[package]
name = "uasset"
description = "Parsing of Unreal Engine asset files (uassets)"
keywords = ["unreal", "ue4", "uasset"]
categories = ["game-development", "parser-implementations"]
authors = ["Jørgen P. Tjernø <jorgen@tjer.no>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jorgenpt/uasset-rs/"
repository = "https://github.com/jorgenpt/uasset-rs/"
version = "0.1.2"
# Don't include the test assets or development files in the crate
exclude = ["/assets/", "/.github/", "/.vscode/", ".gitignore"]

[dependencies]
binread = "2.1.1"
bit_field = "0.10.1"
structopt = { version = "0.3", optional = true }
thiserror = "^1"

[dev-dependencies]
rstest = "0.10.0"
rstest_reuse = "0.1.3"
test_utilities = { path = "test_utilities" }

[features]
commandline-tool = ["structopt"]

[[bin]]
name = "uasset"
required-features = ["commandline-tool"]