[package]
name = "uasset"
description = "Parsing of Unreal Engine asset files (uassets)"
keywords = ["unreal", "ue4", "uasset"]
categories = ["game-development", "parser-implementations"]
authors = ["Jørgen P. Tjernø <jorgen@tjer.no>"]
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jorgenpt/uasset-rs/"
repository = "https://github.com/jorgenpt/uasset-rs/"
version = "0.6.0"
# Don't include the test assets or development files in the crate
exclude = ["/assets/", "/.github/", "/.vscode/", ".gitignore"]

[dependencies]
binread = "2.1.1"
bit_field = "0.10.1"
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2.0.12"

# Optional dependencies for comandline-tool feature
anyhow = { version = "^1", optional = true }
log = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
simplelog = { version = "^0.12.0", optional = true }
structopt = { version = "0.3", optional = true }
structopt-flags = { version = "0.3.6", optional = true }
tempfile = { version = "3.3", optional = true }
walkdir = { version = "2", optional = true }

[dev-dependencies]
rstest = "0.25.0"
rstest_reuse = "0.7.0"
test_utilities = { path = "test_utilities" }

[features]
commandline-tool = [
    "anyhow",
    "log",
    "serde",
    "serde_json",
    "simplelog",
    "structopt",
    "structopt-flags",
    "tempfile",
    "walkdir",
]

[[bin]]
name = "uasset"
required-features = ["commandline-tool"]
